--- a/pkg/web/templates/config.html
+++ b/pkg/web/templates/config.html
@@ -487,7 +487,7 @@
                                         </div>
                                         <div class="form-control">
                                             <label class="label" for="rclone.umask">
-                                                <span class="label-text font-medium">Group ID (PGID)</span>
+                                                <span class="label-text font-medium">UMASK</span>
                                             </label>
                                             <input type="text" class="input input-bordered" name="rclone.umask" id="rclone.umask" placeholder="0022">
                                             <div class="label">
