- Add more rclone supports - Add rclone log viewer - Add more stats to Stats page - Fix some minor bugs

--- a/pkg/web/templates/config.html
+++ b/pkg/web/templates/config.html
@@ -467,6 +467,19 @@
                                         </div>
 
                                         <div class="form-control">
+                                            <label class="label" for="rclone.log_level">
+                                                <span class="label-text font-medium">Log Level</span>
+                                            </label>
+                                            <select class="select select-bordered" name="rclone.log_level" id="rclone.log_level">
+                                                <option value="INFO">INFO</option>
+                                                <option value="DEBUG">DEBUG</option>
+                                                <option value="WARN">WARN</option>
+                                                <option value="ERROR">ERROR</option>
+                                                <option value="TRACE">TRACE</option>
+                                            </select>
+                                        </div>
+
+                                        <div class="form-control">
                                             <label class="label" for="rclone.uid">
                                                 <span class="label-text font-medium">User ID (PUID)</span>
                                             </label>
