Hotfix rclone logging flags

--- a/pkg/web/templates/config.html
+++ b/pkg/web/templates/config.html
@@ -473,9 +473,8 @@
                                             <select class="select select-bordered" name="rclone.log_level" id="rclone.log_level">
                                                 <option value="INFO">INFO</option>
                                                 <option value="DEBUG">DEBUG</option>
-                                                <option value="WARN">WARN</option>
+                                                <option value="NOTICE">NOTICE</option>
                                                 <option value="ERROR">ERROR</option>
-                                                <option value="TRACE">TRACE</option>
                                             </select>
                                         </div>
 
