--- a/pkg/web/templates/stats.html
+++ b/pkg/web/templates/stats.html
@@ -390,7 +390,7 @@
                                         </div>
                                         <div class="text-right">
                                             <div class="text-xs font-mono text-base-content/80">
-                                                Token: ${account.token_masked || '****'}
+                                                Token: ${account.masked_token || '****'}
                                             </div>
                                         </div>
                                     </div>
